--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -4,10 +4,17 @@
              xmlns:m="clr-namespace:CSimple.Models"
              xmlns:v="clr-namespace:CSimple.Views"
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+             xmlns:converters="clr-namespace:CSimple.Converters"
              ios:Page.UseSafeArea="True"
              Title="Action"
              Shell.NavBarIsVisible="{OnIdiom True, Desktop=False}"
              x:Class="CSimple.Pages.ActionPage">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:BoolToTextConverter x:Key="BoolToTextConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ScrollView>
         <StackLayout Padding="10" Spacing="20">
@@ -31,7 +38,7 @@
                             <ProgressBar x:Name="ProgressBar" Grid.ColumnSpan="3" HeightRequest="4" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="LightGray" ProgressColor="Green" Progress="0"/>
                             <Label Grid.Column="0" Text="{Binding ActionName}" VerticalOptions="Center"/>
                             <Label Grid.Column="1" Text="{Binding ActionArrayFormatted}" VerticalOptions="Center"/>
-                            <Button Grid.Column="2" Text="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.IsSimulating, Converter={StaticResource BoolToTextConverter}, ConverterParameter='Simulate,Stop'}"
+                            <Button Grid.Column="2" Text="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.IsSimulating, Converter={StaticResource BoolToTextConverter}}"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ToggleSimulateActionGroupCommand}" 
                                 CommandParameter="{Binding .}" VerticalOptions="Center"/>
                         </Grid>
