--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -12,7 +12,7 @@
 
     <ContentPage.Resources>
         <ResourceDictionary>
-            <converters:BoolToTextConverter x:Key="BoolToTextConverter"/>
+            <converters:BoolToTextConverter x:Key="BoolToTextConverter" TrueText="Stop" FalseText="Start"/>
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -35,12 +35,13 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid Padding="10" ColumnDefinitions="*, *, Auto">
-                            <ProgressBar x:Name="ProgressBar" Grid.ColumnSpan="3" HeightRequest="4" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="LightGray" ProgressColor="Green" Progress="0"/>
+                            <ProgressBar x:Name="ProgressBar" Grid.ColumnSpan="3" HeightRequest="4" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="LightGray" ProgressColor="Green" Progress="0"
+                                         IsVisible="{Binding IsSimulating}" />
                             <Label Grid.Column="0" Text="{Binding ActionName}" VerticalOptions="Center"/>
                             <Label Grid.Column="1" Text="{Binding ActionArrayFormatted}" VerticalOptions="Center"/>
-                            <Button Grid.Column="2" Text="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.IsSimulating, Converter={StaticResource BoolToTextConverter}}"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ToggleSimulateActionGroupCommand}" 
-                                CommandParameter="{Binding .}" VerticalOptions="Center"/>
+                            <Button Grid.Column="2" Text="{Binding IsSimulating, Converter={StaticResource BoolToTextConverter}}"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.SimulateActionGroupCommand}" 
+                                    CommandParameter="{Binding .}" VerticalOptions="Center"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
