--- a/src/CSimple/Pages/ActionPage.xaml
+++ b/src/CSimple/Pages/ActionPage.xaml
@@ -59,8 +59,8 @@
                     <Label Text="Input Action" FontSize="Medium" HorizontalOptions="Center" TextColor="Black"/>
                     <Entry x:Name="ActionNameEntry" Placeholder="Enter Action Name" WidthRequest="250" BackgroundColor="#F0F0F0" TextColor="Black" PlaceholderColor="Black"/>
                     <Entry x:Name="ActionArrayEntry" Placeholder="Enter Actions (comma separated)" WidthRequest="250" BackgroundColor="#F0F0F0" TextColor="Black" PlaceholderColor="Black"/>
-                    <Image x:Name="ActionImage" WidthRequest="250" HeightRequest="150" BackgroundColor="#F0F0F0"/>
-                    <Button Text="Upload Image" Clicked="OnUploadImageClicked" BackgroundColor="Blue" TextColor="White"/>
+                    <Image x:Name="ActionImage" WidthRequest="75" HeightRequest="75" BackgroundColor="#F0F0F0"/>
+                    <!-- <Button Text="Upload Image" Clicked="OnUploadImageClicked" BackgroundColor="Blue" TextColor="White"/> -->
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="20">
                         <Button Text="Save" Command="{Binding SaveActionCommand}" BackgroundColor="Green" TextColor="White"/>
                         <Button Text="Cancel" Clicked="OnCancelClicked" BackgroundColor="Red" TextColor="White"/>
